--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
-log = "0.4.29"
-env_logger = "0.11.8"
+owo-colors = "4.2.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
